update de music et commencement de user
